--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -8,8 +8,8 @@
       "request": "launch",
       "name": "Launch Program",
       "type": "node",
-      "program": "${workspaceFolder}/2/2b.ts",
-      "cwd": "${workspaceFolder}/2",
+      "program": "${workspaceFolder}/4/4a.ts",
+      "cwd": "${workspaceFolder}/4",
       "runtimeExecutable": "C:\\Users\\Cameron\\.deno\\bin\\deno.EXE",
       "runtimeArgs": ["run", "--unstable", "--inspect-brk", "--allow-all"],
       "attachSimplePort": 9229
